...

/** Test tags for [DeletePlantPopup]. */
object DeletePlantPopupTestTags {
  const val POPUP = "DeletePlantPopup"
  const val QUESTION = "DeletePlantPopupQuestion"
  const val DESCRIPTION = "DeletePlantPopupDescription"
  const val CONFIRM_BUTTON = "PlantPopupConfirmButton"
  const val CANCEL_BUTTON = "PlantPopupDeleteQuestion"
}

/**
 * Popup that asks users to confirm they want to delete a selected plant.
 *
 * @param onDelete the callback called when the plant is confirmed to be deleted
...
