...
private val BADGE_ICON_X = (-17).dp
private val BADGE_ICON_Y = 7.dp
private val BADGE_BORDER_WIDTH = 1.dp

/*---------------- TEST TAGS FOR ALL COMPONENTS OF THE SCREEN --------------*/
object FeedScreenTestTags {
  const val ADD_FRIEND_BUTTON = "AddFriendButton"
  const val FRIENDS_REQUESTS_BUTTON = "FriendsRequestsButton"
  const val FRIEND_LIST_BUTTON = "FriendListButton"
  const val NO_ACTIVITY_MESSAGE = "NoActivityMessage"
  const val GENERIC_CARD_DESCRIPTION = "GenericCardDescription"
  const val GENERIC_CARD_ICON = "GenericCardIcon"

  /** get unique test tag for a specific activity */
  fun getTestTagForActivity(activity: GardenActivity) = "Activity${activity.createdAt}"
...
